# ProjetCmake

./: CMakeLists.txt  Doxyfile.in  README.md  main.cpp
.github/workflows/: ci.yml
inc/: example_class.h  factorial.h  fibonacci.h  palindrome.h  prime.h
src/: CMakeLists.txt  example_class.cpp  factorial.cpp  fibonacci.cpp  palindrome.cpp  prime.cpp
tests/: CMakeLists.txt  test_factorial.cpp  test_fibonacci.cpp  test_palindrome.cpp  test_prime.cpp
